--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.scss
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.scss
@@ -1,42 +1,17 @@
 ion-item {
     --inner-padding-end: 2px !important;
     --inner-padding-start: 2px ;
-    --background: var( --ion-color-light);
-
-    --border-width: 0px !important;
+    --background: var(--ion-color-light);
     --padding-bottom: 1px;
-    --padding-start: 0px;
-    --padding-end: 0px;
+    --padding-start: 1px;
+    --padding-end: 1px;
     --padding-top: 1px;
+    --background: var(--ion-color-light);
 }
+
 ion-item-sliding{
     margin-bottom: 2%;
-}
-
-ion-item-options {
-    --inner-padding-end: 2px !important;
-    --inner-padding-start: 2px ;
-    --background: var( --ion-color-light);
-
     --border-width: 0px !important;
-    --padding-bottom: 0px;
-    --padding-start: 0px;
-    --padding-end: 0px;
-    --padding-top: 0px;
-
-
-}
-ion-item-option {
-    background-color: #833535 !important;
-    --inner-padding-end: 2px !important;
-    --inner-padding-start: 2px ;
-    --background: var( --ion-color-light);
-
-    --border-width: 0px !important;
-    --padding-bottom: 0px;
-    --padding-start: 0px;
-    --padding-end: 0px;
-    --padding-top: 0px;
 
 }
 
@@ -44,10 +19,9 @@ ion-icon {
     color: var( --ion-color-success);
     opacity: 100%;
     size: large !important;
+   margin-right: 10px;
 }
 
 .numberLabel{
     color: var( --ion-color-success);
-    
 }
-
