--- a/Frontend/Emoticoach/src/theme/variables.scss
+++ b/Frontend/Emoticoach/src/theme/variables.scss
@@ -198,6 +198,10 @@
 
     //medium is medium greay
     --ion-color-medium: #929292;
+    --ion-color-medium-contrast: #929292;
+    --ion-color-medium-shade: #929292;
+    --ion-color-medium-tint: #929292;
+
     //light is the lightezt grey
     --ion-color-light: #606060;
 
