--- a/backend/website/static/css/resources.css
+++ b/backend/website/static/css/resources.css
@@ -639,91 +639,12 @@ banner
 
 
 /*
----------------------------------------------
-features
----------------------------------------------
-*/
-
-#features {
-  margin-bottom: 80px;
-}
-
-.feature-item {
-  display: inline-block;
-  margin-bottom: 60px;
-}
-
-.feature-item .left-icon img {
-  float: left;
-  margin-right: 30px;
-}
-
-.feature-item .right-content {
-  display: inline;
-}
-
-.feature-item .right-content h4 {
-  margin-top: 0px;
-  margin-bottom:  7px;
-  letter-spacing: 0.25px;
-  color: #232d39;
-  font-size: 19px;
-  font-weight: 600;
-  text-transform: capitalize;
-}
-
-.feature-item .right-content a.text-button {
-  margin-top: 7px;
-  display: inline-block;
-  font-size: 13px;
-  text-transform: uppercase;
-  color: #4e73df;
-  font-weight: 500;
-}
-
-/*
----------------------------------------------
-subscribe
----------------------------------------------
-*/
-
-#about-us {
-  padding: 120px 0px;
-  background-image: url(../images/cta-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-}
-
-.cta-content h2 {
-  font-size: 36px;
-  text-transform: uppercase;
-  font-weight: 800;
-  color: #fff;
-  letter-spacing: 1px;
-}
-
-.cta-content h2 em {
-  font-style: normal;
-  color: #4e73df;
-}
-
-.cta-content p {
-  font-size: 16px;
-  color: #fff;
-  margin: 15px 0px 25px 0px;
-}
-
-
-
-/*
 --------------------------------------------
-Our Classes
+Our Features
 --------------------------------------------
 */
 
-#our-classes {
+#our-features {
   margin-bottom: 140px;
 }
 
@@ -809,279 +730,6 @@ Our Classes
   color: #7a7a7a;
   margin-bottom: 28px;
 }
-
-
-/* 
----------------------------------------------
-schedule
---------------------------------------------- 
-*/
-
-#schedule {
-  padding: 0px 0px 140px 0px;
-  background-image: url(../images/schedule-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#schedule table {
-  width: 100%;
-  text-align: center;
-  border: 1px solid #fff;
-}
-
-#schedule table tbody {
-  border-top: 1px solid #fff; 
-}
-
-#schedule table tbody tr {
-  border-bottom: 1px solid #fff;
-}
-
-#schedule table tbody tr td {
-  border-right: 1px solid #fff;
-  height: 100px;
-}
-
-#schedule table tr td {
-  color: #fff;
-  font-size: 13px;
-  text-transform: capitalize;
-  font-weight: 500;
-  letter-spacing: 0.25px;
-}
-
-.schedule-table.filtering .ts-item {
-    opacity: 0;
-    transition: all 0.5s;
-}
-
-.schedule-table.filtering .ts-item.show {
-    opacity: 1;
-    transition: all 0.5s;
-}
-
-#schedule .filters {
-  margin-bottom: 40px;
-}
-#schedule .filters ul {
-  padding: 0;
-  text-align: center;
-}
-#schedule .filters ul li {
-  list-style: none;
-  display: inline;
-  cursor: pointer;
-  position: relative;
-  margin-right: 10px;
-  font-size: 15px;
-  font-weight: 500;
-  color: #fff;
-  text-transform: capitalize;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-#schedule .filters ul li:after {
-  content: "/";
-  margin-left: 10px;
-  color: #fff;
-}
-#schedule .filters ul li:last-child {
-  margin-right: 0px;
-}
-#schedule .filters ul li:last-child::after {
-  display: none;
-}
-#schedule .filters ul li.active,
-#schedule .filters ul li:hover {
-  color: #4e73df;
-}
-#schedule .filters-content {
-  margin-top: 50px;
-}
-#schedule .filters-content .show {
-  opacity: 1;
-  visibility: visible;
-  transition: all 350ms;
-}
-#schedule .filters-content .hide {
-  opacity: 0;
-  visibility: hidden;
-  transition: all 350ms;
-}
-
-
-/* 
----------------------------------------------
-trainers
---------------------------------------------- 
-*/
-
-#trainers .trainer-item {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  padding: 40px;
-}
-
-#trainers .trainer-item img {
-  width: 100%;
-  border-radius: 5px;
-}
-
-#trainers .trainer-item span {
-  font-size: 13px;
-  font-weight: 500;
-  color: #4e73df;
-  display: inline-block;
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-
-#trainers .trainer-item h4 {
-  font-size: 19px;
-  font-weight: 600;
-  color: #232d39;
-  letter-spacing: 0.5px;
-  margin-bottom: 18px;
-}
-
-#trainers .trainer-item p {
-  margin-bottom: 20px;
-}
-
-#trainers .trainer-item ul.social-icons li {
-  display: inline-block;
-  margin-right: 12px;
-}
-
-#trainers .trainer-item ul.social-icons li:last-child {
-  margin-right: 0px;
-}
-
-#trainers .trainer-item ul.social-icons li a {
-  color: #232d39;
-  transition: all .3s;
-}
-
-#trainers .trainer-item ul.social-icons li a:hover {
-  color: #4e73df;
-}
-
-
-/* 
----------------------------------------------
-contact
---------------------------------------------- 
-*/
-
-#contact-us {
-  margin-top: 140px;
-}
-
-#contact-us .container-fluid .col-lg-6 {
-  padding: 0px;
-}
-
-#contact-us .contact-form {
-  padding: 80px;
-  background-image: url(../images/contact-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#contact-us .contact-form #contact {
-  background-color: #fff;
-  padding: 40px;
-  border-radius: 5px;
-}
-
-.contact-form input,
-.contact-form textarea {
-  color: #7a7a7a;
-  font-size: 13px;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  width: 100%;
-  height: 40px;
-  outline: none;
-  line-height: 40px;
-  padding: 0px 10px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin-bottom: 30px;
-}
-
-.contact-form textarea {
-  height: 150px;
-  resize: none;
-}
-
-.contact-form ::-webkit-input-placeholder { /* Edge */
-  color: #7a7a7a;
-}
-
-.contact-form :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #7a7a7a;
-}
-
-.contact-form ::placeholder {
-  color: #7a7a7a;
-}
-
-.contact-form button {
-  display: inline-block;
-  font-size: 13px;
-  padding: 11px 17px;
-  background-color: #4e73df;
-  color: #fff;
-  text-align: center;
-  font-weight: 400;
-  text-transform: uppercase;
-  transition: all .3s;
-  border: none;
-  outline: none;
-  margin-top: -8px;
-}
-
-.contact-form button:hover {
-  background-color: #f9735b;
-}
-
-
-
-
-/* 
----------------------------------------------
-footer
---------------------------------------------- 
-*/
-footer {
-  text-align: center;
-  padding: 30px 0px;
-}
-
-footer p {
-  color: #232d39;
-  font-size: 13px;
-}
-
-footer p a {
-  cursor: pointer;
-  color: #4e73df;
-}
-
-footer p a:hover {
-  color: #4e73df;
-}
-
-
 
 /* 
 ---------------------------------------------
