--- a/backend/website/templates/team.html
+++ b/backend/website/templates/team.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-    <!-- ***** Testimonials Starts ***** -->
-    <section class="section" id="trainers">
+    <!-- Developers -->
+    <section class="section" id="developers">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
@@ -84,9 +84,8 @@
             </div>
         </div>
     </section>
-    <!-- ***** Testimonials Ends ***** -->
 
-    <!-- ***** Testimonials Starts ***** -->
+    <!-- Advisors -->
     <section class="section" id="instructors">
         <div class="container">
             <div class="row">
@@ -144,8 +143,8 @@
             </div>
         </div>
     </section>
-    <!-- ***** Testimonials Ends ***** -->
 
+    <!-- Advisors -->
     <section class="section" id="instructors">
         <div class="container">
             <div class="row">
