--- a/backend/website/static/css/index.css
+++ b/backend/website/static/css/index.css
@@ -163,6 +163,7 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   transition: all .3s;
+  border-radius: 12px;
 }
 
 .main-button a:hover {
