--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Emoticoach</ion-title>
+    <ion-title>EmotiCoach</ion-title>
     <!-- <ion-buttons slot="end">
         <ion-button expand="block">
           <ion-icon name="settings-outline"></ion-icon>
