--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -1,12 +1,15 @@
-<ion-content>
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button expand="block" routerLink="/tabs/home">
-        <ion-icon name="arrow-back"></ion-icon>
+        <ion-icon color="success" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Muscle Group Graph</ion-title>
   </ion-toolbar>
+</ion-header>
+<ion-content>
+  
 
   <div class="chart-container">
       <canvas  id="MuscleGroupChart" >{{ chart }}</canvas>
