--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.scss
@@ -19,8 +19,8 @@ ion-icon {
     padding: 0px;
 }
 
-capacitor-google-map {
-    display: inline-block;
-    width: 275px;
-    height: 400px;
-}
+// capacitor-google-map {
+//     display: inline-block;
+//     width: 275px;
+//     height: 400px;
+// }
