--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -37,6 +37,8 @@
     </ion-grid>
   </ion-item>
   <ion-item-options>
-    <ion-item-option (click)="deleteSet()">Delete</ion-item-option>
+    <ion-item-option (click)="deleteSet()">
+      <ion-icon slot="icon-only" name="trash"></ion-icon>
+    </ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
