--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -87,3 +87,12 @@ ion-popover {
     color: var(--ion-color-success);
   }
 }
+
+ion-list-header {
+  --background: var(--ion-color-dark);
+}
+
+ion-list {
+  --background: var(--ion-color-dark);
+  
+}
