--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
@@ -11,6 +11,22 @@
         <div class="time ion-text-right"><br>{{message.time_sent | date:'short'}}</div>
       </ion-col>
     </ion-row>
+    <!-- <ion-row size="auto"class="ion-align-items-bottom">
+      <ion-toolbar color="medium">
+        <ion-row class="ion-align-items-center">
+          <ion-col size="10">
+            <ion-textarea autoGrow="true" color="success" class="message-input" rows="1" maxLength="500" [(ngModel)]="msg" placeholder="Tell Others Your Workoing Out!">
+            </ion-textarea>
+          </ion-col>
+          <ion-col size="2">
+            <ion-button expand="block" fill="clear">
+              <ion-icon name="send" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-toolbar>
+    
+    </ion-row> -->
 </ion-grid>
 
 </ion-content>
