--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
@@ -1,8 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Gym Buddy</ion-title>
   </ion-toolbar>
-
 
   <ion-toolbar>
 
@@ -18,7 +17,7 @@
     </ion-title>
 
     <ion-button (click)="openModal()" slot="end" fill="clear">
-      <ion-icon *ngIf="currentPage == 'feed'" size="small" slot="icon-only" name="settings-sharp"></ion-icon>
+      <!-- <ion-icon *ngIf="currentPage == 'feed'" size="small" slot="icon-only" name="settings-sharp"></ion-icon> -->
       <ion-icon *ngIf="currentPage == 'friends'" size="small" name="add-circle-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
@@ -28,27 +27,10 @@
 <ion-content>
 
   <ion-label *ngIf="currentPage == 'feed'">
-    <app-feed></app-feed>
+    <app-gym-select></app-gym-select>
   </ion-label>
   <ion-label *ngIf="currentPage == 'friends'">
     <app-friends-list></app-friends-list>
   </ion-label>
 </ion-content>
 
-<ion-footer *ngIf="currentPage == 'feed'">
-  <ion-toolbar color="medium">
-    <ion-row class="ion-align-items-center">
-      <ion-col size="10">
-        <ion-textarea autoGrow="true" class="message-input" rows="1" maxLength="500" [(ngModel)]="msg">
-        </ion-textarea>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button (click)="sendMsg()" expand="block" fill="clear">
-          <ion-icon name="send" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-toolbar>
-
-
-</ion-footer>
