Added height and made progress on weights page.

--- a/backend/webapp/templates/webapp/profile.html
+++ b/backend/webapp/templates/webapp/profile.html
@@ -32,8 +32,6 @@ Profile
                                 <label for="firstName">First Name</label>
                                 <input id="firstName" type="text" class="form-control" placeholder="First Name" value="{{ first_name }}">
                             </div>
-                        </div>
-                        <div class="row mt-3">
                             <div class="col-md-6">
                                 <label for="lastName">Last Name</label>
                                 <input id="lastName" type="text" class="form-control" placeholder="Last Name" value="{{ last_name }}">
@@ -43,6 +41,16 @@ Profile
                             <div class="col-md-6">
                                 <label for="email">Email</label>
                                 <input id="email" type="text" class="form-control" placeholder="Email" value="{{ email }}">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6">
+                                <label for="height">Height (Inches)</label>
+                                <input id="height" type="text" class="form-control" placeholder="Height (Inches)" value="{{ height }}">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="weightGoal">Weight Goal</label>
+                                <input id="weightGoal" type="text" class="form-control" placeholder="Weight Goal" value="{{ weight_goal }}">
                             </div>
                         </div>
                         <div class="mt-5 text-left">
