--- a/backend/webapp/templates/webapp/weight.html
+++ b/backend/webapp/templates/webapp/weight.html
@@ -120,7 +120,7 @@ input[type="text"]
                     <th scope="col">BMI</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="tableBody">
                 </tbody>
             </table>
         </div>
