--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
@@ -1,32 +1,19 @@
-<ion-content #scrollMe>
-  <ion-grid >
-    <ion-row *ngFor="let message of messageList$ | async">
-      <ion-col size="9" class="message" 
-        [offset]="message.userSent ? 3 : 0"
-        [ngClass]="{'my-message': message.userSent, 'other-message': !message.userSent}">
-        <ion-icon name="person-circle-sharp"></ion-icon>
-        <b> {{ message.user_id}}</b><br>
-        <span>{{ message.myMsg}}
-        </span>
-        <div class="time ion-text-right"><br>{{message.time_sent | date:'short'}}</div>
-      </ion-col>
-    </ion-row>
-    <!-- <ion-row size="auto"class="ion-align-items-bottom">
-      <ion-toolbar color="medium">
-        <ion-row class="ion-align-items-center">
-          <ion-col size="10">
-            <ion-textarea autoGrow="true" color="success" class="message-input" rows="1" maxLength="500" [(ngModel)]="msg" placeholder="Tell Others Your Workoing Out!">
-            </ion-textarea>
-          </ion-col>
-          <ion-col size="2">
-            <ion-button expand="block" fill="clear">
-              <ion-icon name="send" slot="icon-only"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-toolbar>
-    
-    </ion-row> -->
+<ion-content #scrollMe >
+  <ion-grid class="pad-bottom" >
+      <ion-row *ngFor="let message of messageList$ | async">
+        <ion-col size="9" class="message" 
+          [offset]="message.isuser ? 3 : 0"
+          [ngClass]="{'my-message': message.isuser, 'other-message': !message.isuser}">
+          <ion-icon name="person-circle-sharp"></ion-icon>
+          <b> {{ message.username}}</b><br>
+          <span>{{ message.message}}
+          </span>
+          <div class="time ion-text-right"><br>{{message.timestamp | date:'short'}}</div>
+        </ion-col>
+      </ion-row>
 </ion-grid>
 
-</ion-content>
+
+</ion-content> 
+
+
