--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.scss
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.scss
@@ -21,7 +21,7 @@ ion-list {
     resize: none;
     margin-top: 0px;
     --padding-start: 8px;
-    
+
 }
 
 .message {
@@ -45,4 +45,19 @@ ion-list {
     color: #dfdfdf;
     float: right;
     font-size: small;
+}
+
+.support {
+    margin: auto;
+    position: absolute;
+    text-align: center;
+    bottom: 50px;
+    // width: 100%;
+}
+
+.pad-bottom {
+    padding-bottom: 100px;
+}
+.pad-footer {
+    margin-bottom: 100%;
 }
