221 feature mqtt gym topic (#263)
* added get seesions range

* edit ionic item in workout

* add and show friends working

* Gym buddy chat completed, bug fix to account service BehaviorSubject < subject

--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -1,9 +1,40 @@
-  <ion-content>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button expand="block" routerLink="/tabs/home">
-          <ion-icon name="arrow-back"></ion-icon>
-        </ion-button>
+
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button expand="block" routerLink="/tabs/home">
+        <ion-icon color="success" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Muscle Group Graph</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  
+
+  <div class="chart-container">
+      <canvas  id="MuscleGroupChart" >{{ chart }}</canvas>
+  </div>
+
+  <ion-grid style="border-bottom: 2px solid grey">
+    <ion-row>
+    <ion-buttons color="#1E1E1E" lines="none">
+      <ion-col>
+      <ion-button (click)="displayPreviousWeek()">
+        <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
+      </ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-text>{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
+      </ion-col>
+
+      <ion-col>
+      <ion-button (click)="displayNextWeek()">
+        <ion-icon slot="end" name="chevron-forward-outline" size="large"></ion-icon>
+       </ion-button>
+      </ion-col>
+
       </ion-buttons>
       <ion-title>Muscle Group Graph</ion-title>
     </ion-toolbar>
