--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/feed/feed.component.html
@@ -1,18 +1,19 @@
-<ion-content #scrollMe>
-  <ion-grid *ngIf="loaded">
-    <ion-row class="ion-align-items-end" *ngFor="let message of messageList$ | async">
-      <ion-col size="9" class="message" [offset]="message.myMsg ? 3 : 0"
-        [ngClass]=" {'my-message': message.myMsg, 'other-message': !message.myMsg}">
-        <ion-icon name="person-circle-sharp"></ion-icon>
-        <b> {{ message.user_id}}</b><br>
-        <span>I'm going to {{ message.gym}} and hitting {{ message.muscleGroups }}
-        </span>
-        <div class="time ion-text-right"><br>{{message.time_sent | date:'short'}}</div>
-      </ion-col>
-    </ion-row>
+<ion-content #scrollMe >
+  <ion-grid class="pad-bottom" >
+      <ion-row *ngFor="let message of messageList$ | async">
+        <ion-col size="9" class="message" 
+          [offset]="message.isuser ? 3 : 0"
+          [ngClass]="{'my-message': message.isuser, 'other-message': !message.isuser}">
+          <ion-icon name="person-circle-sharp"></ion-icon>
+          <b> {{ message.username}}</b><br>
+          <span>{{ message.message}}
+          </span>
+          <div class="time ion-text-right"><br>{{message.timestamp | date:'short'}}</div>
+        </ion-col>
+      </ion-row>
 </ion-grid>
 
-<ion-grid *ngIf="!loaded">
-</ion-grid>
 
-</ion-content>
+</ion-content> 
+
+
