--- a/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
+++ b/Frontend/Emoticoach/src/app/pages/gym-buddy/gym-buddy.page.html
@@ -1,8 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Gym Buddy</ion-title>
   </ion-toolbar>
-
 
   <ion-toolbar>
 
@@ -18,7 +17,7 @@
     </ion-title>
 
     <ion-button (click)="openModal()" slot="end" fill="clear">
-      <ion-icon *ngIf="currentPage == 'feed'" size="small" slot="icon-only" name="settings-sharp"></ion-icon>
+      <!-- <ion-icon *ngIf="currentPage == 'feed'" size="small" slot="icon-only" name="settings-sharp"></ion-icon> -->
       <ion-icon *ngIf="currentPage == 'friends'" size="small" name="add-circle-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
@@ -26,37 +25,29 @@
 </ion-header>
 
 <ion-content>
+  <app-gym-select *ngIf="currentPage == 'feed'" (gymSelected$)="gymSelected($event)" ></app-gym-select>
 
-  <ion-label *ngIf="currentPage == 'feed'">
-    <app-feed></app-feed>
-  </ion-label>
-  <ion-label *ngIf="currentPage == 'friends'">
-    <app-friends-list></app-friends-list>
-  </ion-label>
+  <app-friends-list *ngIf="currentPage == 'friends'"></app-friends-list>
+
+
 </ion-content>
-
-<ion-footer *ngIf="currentPage == 'feed'">
-  <ion-toolbar color="medium">
-    <ion-grid>
-      <ion-row class="ion-align-items-center">
-        <ion-col size="2">
-
-        </ion-col>
-        <ion-col size="8">
-          <ion-row>
-            <ion-label color="dark">Tell Others Your Working Out!</ion-label>
-          </ion-row>
-          <ion-row>
-          </ion-row>
-        </ion-col>
-        <ion-col size="2">
-          <ion-button (click)="modelSendMsg()" expand="block" fill="clear">
-            <ion-icon name="send" slot="icon-only"></ion-icon>
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+<ion-footer >
+  <ion-toolbar *ngIf="gymSelect" class="support" color="medium">
+    <ion-row class="ion-align-items-center">
+      <ion-col size="10">
+        <ion-textarea autoGrow="true" color="dark" class="message-input" rows="1" maxLength="500" [(ngModel)]="msg"
+          placeholder="Tell Others Your Working Out!">
+        </ion-textarea>
+      </ion-col>
+      <ion-col size="2">
+        <ion-button (click)="sendMsg()" expand="block" fill="clear">
+          <ion-icon name="send" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
+  
+  
+  </ion-footer>
+  
 
-
-</ion-footer>
