Finished Weight Page.

--- a/backend/webapp/templates/webapp/weight.html
+++ b/backend/webapp/templates/webapp/weight.html
@@ -66,8 +66,8 @@ input[type="text"]
             </div>
             
             <div class="text-center">
-                <button id="todayButton" type="button" class="btn btn-secondary btn-sm">Weight</button>
-                <button id="todayButton" type="button" class="btn btn-outline-secondary btn-sm">BMI</button>
+                <button id="weightButton" type="button" class="btn btn-secondary btn-sm">Weight</button>
+                <button id="bmiButton" type="button" class="btn btn-outline-secondary btn-sm">BMI</button>
             </div>
 
             <h4 class="pt-5">Weigh-Ins</h4>
