Finished Sleep page.

--- a/backend/webapp/templates/webapp/base.html
+++ b/backend/webapp/templates/webapp/base.html
@@ -76,7 +76,7 @@
 
             <!-- Nav Item - Sleep -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'sleep' %}">
                     <i class="fas fa-bed"></i>
                     <span>Sleep</span></a>
             </li>
