--- a/Frontend/Emoticoach/src/app/pages/account/account.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/account.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header *ngIf="!changingAvatar">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-button expand="block" routerLink="/tabs/home">
@@ -7,20 +7,20 @@
     </ion-buttons>
     <ion-title>Profile</ion-title>
   </ion-toolbar>
-  
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <app-change-avatar *ngIf="changingAvatar" (dataFromChild)="sentFromChild($event)"></app-change-avatar>
+  <ion-grid *ngIf="!changingAvatar">
     <ion-row>
         <ion-col size="12">
           <ion-card class="form-wrapper">
             <ion-card-content>
-              <ion-icon name="person"></ion-icon>
+                <ion-icon src="../../../../assets/{{selectedAvatar}}.svg" (click)="changeAvatar()"></ion-icon> 
               <ion-item>
                 <ion-text>{{user_firstlast}}</ion-text>
               </ion-item>
-              <ion-button fill={{accountButton}} size="small" (click)="displayAccountPage()">Account</ion-button>
+              <ion-button class="no-ripple" fill={{accountButton}} size="small" (click)="displayAccountPage()">Account</ion-button>
               <ion-button fill={{emotibitButton}} size="small" (click)="displayEmotibitPage()">EmotiBit</ion-button>
               <ion-button fill={{settingsButton}} size="small" (click)="displaySettingsPage()">Settings</ion-button>
             </ion-card-content>
@@ -31,7 +31,6 @@
             <ion-card class="form-wrapper">
               <ion-card-content>
                 <ion-item>
-
                   <ion-icon name="person-outline"></ion-icon>
                   <ion-input type="text" placeholder={{user_firstname}} [(ngModel)]="user_firstname"></ion-input>
                 </ion-item>
@@ -45,7 +44,7 @@
                 </ion-item>
                 <ion-item>
                   <ion-icon name="lock-closed"></ion-icon>
-                  <ion-input type="text" placeholder="*******" [(ngModel)]="user_pass"></ion-input>
+                  <ion-text>********</ion-text>
                 </ion-item>
                 <div class="line-text">
                   <span class="text">
@@ -81,17 +80,13 @@
                   <ion-icon name="time-outline"></ion-icon>
                   <ion-text>{{timezone}}</ion-text>
                 </ion-item>
-                <ion-item>
-                  <ion-icon name="lock-closed"></ion-icon>
-                  <ion-text>*********</ion-text>
-                </ion-item>
-                <ion-button (click)="changeTheme()" expand="block">Change Theme</ion-button>
+                <ion-button expand="block" (click)="changeTheme()">Change Theme</ion-button>
+
+
                 <ion-button color="danger" expand="block" (click)="deleteAccount()">Delete Account</ion-button>
               </ion-card-content>
             </ion-card>
           </ion-col>
-
-         
     </ion-row>
   </ion-grid>
 </ion-content>
